# todolist_api/models/index.js
@@ -7,14 +7,18 @@ const instance = new Sequelize({
 });
 
 const users = require('./users')(instance);
-//const todo = require('./todo')(instance);
-const todo = require('./todo')(instance);
-
+const todos = require('./todo')(instance);
+const usersTodos = require('./usersTodos')(instance);
 // Définir les associations
+users.hasMany(usersTodos, { foreignKey: 'userId' });
+usersTodos.belongsTo(users, { foreignKey: 'userId' });
 
+todos.hasMany(usersTodos, { foreignKey: 'todosId' });
+usersTodos.belongsTo(todos, { foreignKey: 'todosId' });
 
 module.exports = {
     instance,
-    todo,
-    users
+    todos,
+    users,
+    usersTodos
 };
